# reveal-leptos

./: .gitignore  Cargo.toml  README.md  index.html
public/css/: about-me.css
public/reveal/css/theme/source/: black.scss  white.scss
public/reveal/data/: quilt_shape_math.ipynb  scrap.yaml
public/reveal/data/html/: index.html
release/: black-ec74936968618608.css  index.html  manifest.json  reveal-leptos-804883344af48dd8.js  reveal-leptos-804883344af48dd8_bg.wasm  reveal-leptos-ecd750ecda814220.js  reveal-leptos-ecd750ecda814220_bg.wasm  styles-fe1f8b56c0aaf1a3.css
release/public/css/: styles.css
release/public/reveal/css/theme/: white.css
release/public/reveal/data/: quilt-template.md  scrap.md  units.yaml
release/public/reveal/data/html/: table.html
release/public/reveal/lib/font/source-sans-pro/: source-sans-pro.css
src/: lib.rs  main.rs
src/components/: _slides.rs  mod.rs  section_image.rs  section_markdown.rs  section_normal.rs  section_title.rs
src/components/content/: about.rs  free_slides.rs  mod.rs  read_the_source.rs
src/pages/: home.rs
