[package]
name = "reveal-leptos"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["danielclough <danielclough@users.noreply.github.com>", "Hakim El Hattab <http://hakim.se>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4.22"
browser-panic-hook = "0.2.0"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"

leptos-markdown = {git="https://github.com/rambip/leptos-markdown"}

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.45"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
